# dataset-validator

./: .gitignore  README.md  privacy_pipeline_diagram  pyproject.toml  pytest.ini
a_privacy_framework/: data_validator.py  fernet.key  main_code.py  run.py
a_privacy_framework/1_raw/: encryption.key  synthetic_healthcare_dataset.csv.enc
a_privacy_framework/agents/: A_base_agent.py  B_privacy_risk_agent.py  C_privacy_enforcement_agent.py  D_compliance_agent.py  E_sensitivity_agent.py  F_repo_agent.py
a_privacy_framework/data/: Dataset_Generation.ipynb
a_privacy_framework/data/1_raw/: dataset.csv.enc  encryption.key
a_privacy_framework/data/2_processed/: dataset.csv  dataset_chunk_1.csv  dataset_chunk_2.csv
a_privacy_framework/data/3_reports/: dataset_validation_report.json  synthetic_healthcare_dataset_validation_report.json  validation_report.json
dataset_generation/: synthetic_healthcare_dataset.csv
dataset_validator/: classify_attributes.py  compute_utility.py  gdpr_compliance.py  sensitivity_level.py
tests/: test_classify_attributes.py  test_compute_utility.py  test_gdpr_compliance.py  test_sensitivity_level.py
