[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-validator"
version = "0.1.0"
description = "A framework to validate and sanitize datasets for sensitivity and compliance"
authors = [
    { name = "Chandrakanth R M", email = "chandrakanthrm89@gmail.com" },
    { name = "Abinaya S", email = "abinayas235@gmail.com" },
    { name = "Ponmanoj P", email = "pponmanoj@gmail.com" },
    { name = "Manish V", email = "manishvelu777@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "google-generativeai",
    "pandas",
    "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]
